--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.5.0
   cloud_firestore: ^5.6.4
   google_sign_in: ^6.2.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
