--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.6.4
   google_sign_in: ^6.2.2
   http: ^1.3.0
+  flashy_tab_bar2: ^0.0.10
 
 dev_dependencies:
   flutter_test:
