--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: ^6.2.2
   http: ^1.3.0
   flashy_tab_bar2: ^0.0.10
+  bottom_navy_bar: ^6.1.0
 
 dev_dependencies:
   flutter_test:
